--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <p>
                         Creating yourself as a as Influencer. It means to qualify or build. Apply for a job .Then focus on career.
                     </p>
-                    <a class="link-btn" target="_blank" href="">Preebook now</a>
+                    <a class="link-btn" target="_blank" href=""><button>Preebook now
+                        <i class="fas fa-arrow-right"></i></button></a>
             </div>
             <div class="right-div"> 
                 <img src="images/main-camera.png" alt="">
