--- a/index.html
+++ b/index.html
@@ -40,6 +40,33 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </section>
+        <section class="section-two">
+            <h2>Popular Collection</h2>
+            <div class="popular-collections">
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Flex Tripod</h3>
+                        <h4>$50.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>4.99</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
