--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <!-- end header  -->
     <main>
+        <!-- section one start  -->
         <section class="section-one">
             <div class="left-div">
                 <h1>Start your Journey as 
@@ -40,6 +41,8 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </section>
+        <!-- section one end -->
+        <!-- section two start  -->
         <section class="section-two">
             <h2>Popular Collection</h2>
             <div class="popular-collections">
@@ -65,8 +68,119 @@
                         </p>
                     </div>
                 </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Microphone</h3>
+                        <h4>$150.68</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>4.20</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Airbuds</h3>
+                        <h4>$120.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>3.99</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Drone</h3>
+                        <h4>$950.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>4.50</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Light Setup</h3>
+                        <h4>$1250.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>4.50</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Photoshoot set</h3>
+                        <h4>$850.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <span>3.90</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
+        <!-- section two end -->
     </main>
     <footer></footer>
 </body>
