--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
                             <span>4.99</span>
                         </div>
                         <p class="delivery-info">
