--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
                             <span>4.20</span>
                         </div>
                         <p class="delivery-info">
@@ -102,7 +102,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
                             <span>3.99</span>
                         </div>
                         <p class="delivery-info">
@@ -124,7 +124,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
                             <span>4.50</span>
                         </div>
                         <p class="delivery-info">
@@ -146,7 +146,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
                             <span>4.50</span>
                         </div>
                         <p class="delivery-info">
@@ -168,7 +168,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
                             <span>3.90</span>
                         </div>
                         <p class="delivery-info">
