--- a/index.html
+++ b/index.html
@@ -178,6 +178,72 @@
                         </p>
                     </div>
                 </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Vlogging Camera</h3>
+                        <h4>$1850.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>3.90</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Green Screen</h3>
+                        <h4>$25.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>3.90</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="collection">
+                    <div class="banner">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="detail">
+                        <h3>Action Camera</h3>
+                        <h4>$385.48</h4>
+                        <div class="ratting">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star empty"></i>
+                            <span>3.90</span>
+                        </div>
+                        <p class="delivery-info">
+                            Wordwide shifting 
+                            available
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- section two end -->
