--- a/index.html
+++ b/index.html
@@ -247,7 +247,16 @@
             </div>
         </section>
         <!-- section two end -->
+        <!-- section three start -->
+        <section class="section-three">
+
+        </section>
+        <!-- section three end -->
     </main>
-    <footer></footer>
+    <!-- footer start -->
+    <footer>
+        
+    </footer>
+    <!-- footer end -->
 </body>
 </html>
