--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             <span>4.99</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -84,8 +84,8 @@
                             <span>4.20</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -106,8 +106,8 @@
                             <span>3.99</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -128,8 +128,8 @@
                             <span>4.50</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -150,8 +150,8 @@
                             <span>4.50</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -172,8 +172,8 @@
                             <span>3.90</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -194,8 +194,8 @@
                             <span>3.90</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -216,8 +216,8 @@
                             <span>3.90</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
@@ -238,8 +238,8 @@
                             <span>3.90</span>
                         </div>
                         <p class="delivery-info">
-                            Wordwide shifting 
-                            available
+                            Wordwide shifting <br>
+                            available <br>
                             Buyers protection possible!
                         </p>
                     </div>
