--- a/index.html
+++ b/index.html
@@ -249,7 +249,19 @@
         <!-- section two end -->
         <!-- section three start -->
         <section class="section-three">
-
+            <div class="left-div-two"> 
+                <iframe width="460" height="315" src="https://www.youtube.com/embed/4_5YIbseUAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="right-div-two">
+                <h1>Influncer # featured products at one place</h1>
+                    <p>
+                        See in our YouTube channlen and our <br>
+                         official advertisement.Thirty percent off sell.
+                    </p>
+                    <a class="link-btn" target="_blank" href=""><button>Preebook now
+                        <i class="fas fa-arrow-right"></i></button></a>
+            </div>
+           
         </section>
         <!-- section three end -->
     </main>
