--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
         <!-- section two end -->
         <!-- section three start -->
         <section class="section-three">
-            <div class="left-div-two"> 
+            <div class="left-div-three"> 
                 <iframe width="460" height="315" src="https://www.youtube.com/embed/4_5YIbseUAI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="right-div-two">
+            <div class="right-div-three">
                 <h1>Influncer # featured products at one place</h1>
                     <p>
                         See in our YouTube channlen and our <br>
