--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@
                         </p>
                     </div>
                 </div>
+                <p class="speacial-btn">
+                    <a class="link-btn" target="_blank" href=""> See More
+                        <i class="fas fa-arrow-right"></i></a>
+                </p>
             </div>
         </section>
         <!-- section two end -->
