--- a/index.html
+++ b/index.html
@@ -270,8 +270,16 @@
         <!-- section three end -->
     </main>
     <!-- footer start -->
-    <footer>
-        
+    <footer class="bottom-style">
+        <h3>Influencer products</h3>
+        <h5>Copyright &copy; 2022, influencer products</h5>
+        <h6>All rights reserved</h6>
+        <p>
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-dribbble-square"></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-youtube"></i>
+        </p>
     </footer>
     <!-- footer end -->
 </body>
