--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/38e307f30a.js" crossorigin="anonymous"></script>
     <!-- style sheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/tripod.png" type="image/x-icon">
 </head>
 <body>
     <!-- start header  -->
